--- a/sdf_asp_net/Views/Shared/_Layout2.cshtml
+++ b/sdf_asp_net/Views/Shared/_Layout2.cshtml
@@ -28,14 +28,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Index", "Project")">Startseite</a>
                 </li>
-                <li class="nav-item">
+                @*<li class="nav-item">
                     <a class="nav-link" href="@Url.Action("About", "Home")">Info</a>
-                </li>
+                </li>*@
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Contact", "Home")">Kontakt</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("MyCalendar", "Home")">MyCalendar</a>
+                    <a class="nav-link" href="@Url.Action("MyCalendar", "Home")">Terminkalender</a>
                 </li>
                 @Html.Partial("_LoginPartial")
             </ul>
